# denigma

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Readme_Roode.md  build.cmake
docs/: enigma_xml.md
nodeApp/: package-lock.json  package.json
nodeApp/public/: pianoBraces.html
nodeApp/script/: denigma.js
src/: Makefile  main.cpp
